# autolineage

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  compliance_report.json  compliance_report.md  employees.csv  employees_filtered.csv  eng_employees.csv  final_clean_data.csv  final_compliance_report.json  final_compliance_report.md  final_features.csv  final_raw_data.csv  final_statistics.csv  final_summary.csv  final_test.csv  final_train.csv  high_sales.csv  merged_data.csv  notebook_sales.csv  notebook_sales_clean.csv  notebook_summary.csv  products.csv  pyproject.toml  raw_data_2.csv  sales_clean.csv  sales_data.csv  sales_employees.csv  sales_eng_combined.csv  sales_summary.csv  summary.csv  test_complete.ps1  test_data_filtered.csv  training_data_final.csv  training_data_raw.csv
.ipynb_checkpoints/: jupyter_demo-checkpoint.ipynb
autolineage/: __init__.py  auto.py  cli.py  database.py  graph.py  hooks.py  magic.py  reporter.py  tracker.py
docs/: cli.md  compliance.md  quickstart.md
docs/docs/: publishing.md
examples/: auto_operations_test.py  auto_tracking_test.py  basic_test.py  compliance_report_test.py  create_jupyter_demo.py  final_demo.py  graph_visualization_test.py  inspect_db.py  jupyter_magic_demo.md  quickstart.py  test_pipeline.py
tests/: test_database.py  test_integration.py  test_tracker.py
